Support for prettifying talkgroup and radio IDs

--- a/partials/recording.tmpl.html
+++ b/partials/recording.tmpl.html
@@ -3,7 +3,7 @@
       <a ng-click="toggleFavourite(recording)" class="favourite" ng-class="{ isFavourite: recording.favourite}">&nbsp;</a>
       <a ng-click="toggleShowComment(recording)" class="comment" ng-class="{ hasComment: recording.comment, showComment: recording.showComment}">&nbsp;</a>
 
-      <wavesurfer class="recording-waveform" href="recording/{{recording.filename}}" title="{{recording.date | date:'h:mm:ssa'}} - {{recording.date | date:longDate}}" artist="{{(recording.rid != -1) ? recording.rid : 'Unknown'}} - {{(recording.tgid != -1) ? recording.tgid : 'Unknown'}}" autoplay="recording.autoplay" finished="finishedPlayingRecording(recording)"></wavesurfer>
+      <wavesurfer class="recording-waveform" href="recording/{{recording.filename}}" title="{{recording.date | date:'h:mm:ssa'}} &mdash; {{recording.date | date:longDate}}" artist="{{prettifyRadioId(recording.rid)}} &mdash; {{prettifyTalkgroupId(recording.tgid)}}" autoplay="recording.autoplay" finished="finishedPlayingRecording(recording)"></wavesurfer>
    </div>
 
    <div class="comment-wrapper" ng-show="recording.showComment">
