Style updates (and other minor changes)

--- a/partials/rca-notice.tmpl.html
+++ b/partials/rca-notice.tmpl.html
@@ -1,7 +1,7 @@
 <section class="notice">
    <h2>Important Notice</h2>
    <p>This stream is provided <b>only</b> to members of the University of Waterloo Amateur Radio Club.</p>
-   <p>Under the <a href="http://laws-lois.justice.gc.ca/PDF/R-2.pdf">Radio Communication Act of Canada</a>, you are prohibited from rebroadcasting or discussing the items you hear on the scanner. It is also against the act to act upon the information you hear&mdash;that is you cannot go somewhere because you heard something was happening.</p>
+   <p>Under the <a href="http://laws-lois.justice.gc.ca/PDF/R-2.pdf" target="_blank">Radio Communication Act of Canada</a>, you are prohibited from rebroadcasting or discussing the items you hear on the scanner. It is also against the act to act upon the information you hear&mdash;that is you cannot go somewhere because you heard something was happening.</p>
 
    <p>Members found in violation of these rules will have their access removed.</p>
 
